--- a/public/stylesheets/receiver.styl
+++ b/public/stylesheets/receiver.styl
@@ -42,11 +42,12 @@ html,body
 		padding-left 0.5%
 
 		.content-box
-			background-color rgba(0,0,0,0.7)
+			background-color rgba(0,0,0,0.8)
 			padding 1em
 			width 32%
 			margin 5px 0.5%
 			float left
+			border-radius 10px
 
 			.uptime
 				font-size 10pt
@@ -73,9 +74,13 @@ html,body
 					width 100%
 					top 0
 					bottom 0
-					background-color green
+					background-color #308014
 					margin-left -0.5em
-					z-index -100
+					z-index 50
+
+				.cpu-pct
+					position relative
+					z-index 100
 
 			.load
 				overflow auto
